<resources>
    <string name="app_name">FortGuide</string>

    <string name="weapon_text_label">ARMAS</string>
    <string name="place_text_label">LUGARES</string>
    <string name="theory_text_label">TEORÍAS</string>
    <string name="advice_text_label">CONSEJOS</string>
    <string name="challenge_text_label">DESAFÍOS</string>
    <string name="shop_text_label">TIENDA</string>
    <string name="support_text_label">APOYO</string>
    <string name="button_continue_label">CONTINUAR</string>
    <string name="menu_label">MENÚ</string>
    <string name="search_button_label">BUSCAR</string>
    <string name="banana_button_label" />
    <string name="weapon_bar_label">ARMAS</string>
    <string name="advice_bar_label">CONSEJOS</string>
    <string name="support_bar_label">APOYO</string>
    <string name="place_bar_label">LUGARES</string>
    <string name="theory_bar_label">TEORÍAS</string>
    <string name="newTheory_bar_label">NUEVA TEORÍA</string>
    <string name="user_text_label">Usuario</string>
    <string name="user_edit_text">Nombre del usuario</string>
    <string name="name_text_view">Nombre de la teoría</string>
    <string name="description_text_view">Descripción de la teoría</string>
    <string name="cancel_button_label">Cancelar</string>
    <string name="send_button_label">ENVIAR</string>
    <string name="challenge_label_text">Challenge Content</string>
    <string name="challenge_bar_text_label">DESAFIOS</string>
    <string name="title_advice_label">Titulo</string>
    <string name="content_advice_label">Hola buenas tardes que tal estas espero que esten bien porque esto es un texto de prueba fleje largo en verdad</string>
    <string name="challenge_detail_label">Desafios-Semana</string>
    <string name="challenge_detail_title_label">Challenge Detail Title</string>
    <string name="challenge_detail_content_label">Challenge Detail Content</string>
    <string name="creator_code_label">Código de creador:</string>
    <string name="content_description_instagram">instagram</string>
    <string name="content_description_twitter">twitter</string>
    <string name="content_description_twitch">twitch</string>
    <string name="content_description_youtube">youtube</string>
    <string name="star_image_label">starImage</string>
    <string name="chestNumber_label_TextView">chestNumber</string>
    <string name="PeoplePercent_label_textView">PeoplePercent</string>
    <string name="detail_label_text">Detail Text</string>
    <string name="content_label_text">Content text</string>
    <string name="place_image_menu_label">placeImage</string>
    <string name="chest_image_label">chestImage</string>
    <string name="people_image_label">peopleImage</string>
    <string name="shop_bar_label">TIENDA</string>
    <string name="content_description_shop_image">image</string>
    <string name="codigo_del_creador_Text">abcdeegdsg</string>
    <string name="logo_picture_label">LogoPicture</string>
    <string name="creador_text_label">Creador</string>
    <string name="content_theory_detail">Titulo</string>
    <string name="user_test_theory_detail">creator12345</string>
    <string name="detail_theory_detail_text">Esto es un texto fleje largo para que se vea que va hacia abajo como deberia, llenandose asi el fondo</string>
    <string name="status_label_down">LOS SERVIDORES ESTÁN CAÍDOS ;(</string>
    <string name="status_label_up">LOS SERVIDORES ESTÁN FUNCIONANDO ;)</string>
    <string name="test_text_label">Texto de prueba</string>
    <string name="common_label">Common</string>
    <string name="uncommon_label">Uncommon</string>
    <string name="rare_label">Rare</string>
    <string name="epic_label">Epic</string>
    <string name="legendary_label">Legendary</string>
    <string name="opcion_text_label">Opcion</string>
    <string name="shop_image_label">shopImage</string>
    <string name="theory_image_label">theoryImage</string>
    <string name="advice_image_label">adviceImage</string>
    <string name="challenge_image_label">challengeImage</string>
    <string name="weapon_image_label">weaponImage</string>
    <string name="place_image_label">placeImage</string>
    <string name="support_image_label">supportImage</string>
    <string name="icon_label">ICONO</string>
    <string name="weapon_name_label">NOMBRE</string>
    <string name="weapon_damage_body_label">DAÑO CUERPO</string>
    <string name="weapon_damage_head_label">DAÑO CABEZA</string>
    <string name="weapon_dps_label">DPS</string>
    <string name="weapon_firerate_label">CADENCIA</string>
    <string name="weapon_reload_label">RECARGA</string>
    <string name="weapon_size_label">CARGADOR</string>
    <string name="weapon_ammo_label">BALAS POR TIRO</string>
    <string name="contact_text_label">SOPORTE</string>
    <string name="newTheory_error">Por favor, rellene todos los campos antes de seguir con la solicitud</string>
    <string name="theory_inserted">Teoría añadida correctamente</string>
    <string name="dislike_number_label">456</string>
    <string name="likes_number_label">123</string>
    <string name="place_pisos_label">PisosPicados</string>
    <string name="name_example_label">GuilleSergio</string>
    <string name="prize_example_label">1500</string>

</resources>
