<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weapons"
    tools:context=".weapon.WeaponActivity">

    <TextView
        android:id="@+id/weaponBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:background="@color/colorButton"
        android:text="@string/weapon_bar_label"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorTextButtonWhite"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <include
        layout="@layout/banana_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/weaponBar"
        tools:layout_editor_absoluteX="0dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/commonRarityButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:layout_weight="1"
                    android:background="@drawable/common_layout"
                    android:text="@string/common_label" />

                <Button
                    android:id="@+id/uncommonRarityButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_weight="1"
                    android:background="@drawable/uncommon_layout"
                    android:text="@string/uncommon_label" />

                <Button
                    android:id="@+id/rareRarityButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_weight="1"
                    android:background="@drawable/rare_layout"
                    android:text="@string/rare_label" />

                <Button
                    android:id="@+id/epicRarityButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_weight="1"
                    android:background="@drawable/epic_layout"
                    android:text="@string/epic_label" />

                <Button
                    android:id="@+id/legendaryRarityButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:layout_weight="1"
                    android:background="@drawable/legendary_layout"
                    android:text="@string/legendary_label" />

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/colorButton"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/iconText"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/icon_label"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weapon_name_label"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/damageBodyText"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weapon_damage_body_label"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/damageHeadText"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weapon_damage_head_label"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dpsText"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weapon_dps_label"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fireRateText"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weapon_firerate_label"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reloadText"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weapon_reload_label"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sizeText"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weapon_size_label"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ammoText"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weapon_ammo_label"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <include
            layout="@layout/weapon_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

        </include
            >

    </LinearLayout>
</android.support.constraint.ConstraintLayout>




